# MCHPRS

./: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: items.rs  lib.rs
crates/core/src/blocks/: mod.rs
crates/core/src/blocks/redstone/: mod.rs
crates/core/src/plot/: data.rs  mod.rs
crates/core/src/redpiler/backend/: direct.rs
crates/core/src/world/: mod.rs  storage.rs
crates/network/src/: lib.rs
crates/network/src/packets/: clientbound.rs  mod.rs
src/: main.rs
