[package]
name = "mchprs_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bitbuffer"
harness = false

[[bench]]
name = "chungus"
harness = false

[dependencies]
mchprs_proc_macros = { path = "../proc_macros" }
# toml = "0.5"
byteorder = "1.4"
hematite-nbt = "0.5"
bitflags = "1.2"
serde = "1"
tracing = "0.1"
anyhow = "1.0"
cranelift = { version = "0.77", optional = true }
cranelift-jit  = { version = "0.77", optional = true }
cranelift-module  = { version = "0.77", optional = true }
itertools = "0.10"
bincode = "1.3"
smallvec = "1.9.0"
petgraph = "0.6"
# redpiler_graph = { path = "../redpiler_graph" }
mchprs_save_data = { path = "../save_data" }
mchprs_blocks = { path = "../blocks" }
mchprs_world = { path = "../world" }
mchprs_utils = { path = "../utils" }
# mchprs_network = { path = "../network" }

[features]
jit_cranelift = ["cranelift", "cranelift-jit", "cranelift-module"]
